getting embarrasing, default username is www-data not nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 # Run as a less privileged user for security reasons.
-user nginx;
+user www-data;
 
 # The maximum number of connections for Nginx is calculated by:
 # max_clients = worker_processes * worker_connections
