travis-ci port mapping for https, because blog uses https by default

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
 
 install:
   - docker build -t blog .
-  - docker run -d -p 127.0.0.1:80:80 --name blog blog
+  - docker run -d -p 127.0.0.1:80:80 -p 127.0.0.1:443:443 --name blog blog
 
 before_script:
   - pip install -r requirements.txt
@@ -20,4 +20,3 @@ before_script:
 script:
   - docker ps | grep -q blog
   - python tests.py
-
