still testing migration to alpine linux

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,10 @@ worker_rlimit_nofile 8192;
 # Process needs to run in foreground within container
 #daemon off;
 
+# Need Logging
+error_log stderr notice;
+
+
 events {
   # When you need > 8000 * cpu_cores connections, you start optimizing your OS,
   # and this is probably the point at which you hire people who are smarter than
